Scene-based image scanning enhanced to four levels (set, scene, pose, take), pose-pre-scanning